# BSwitcher

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: main.yml
include/: Alog.hpp  ForegroundApp.hpp  JSONModule.hpp  JSONSocket.hpp  UnixSocketServer.hpp  main.hpp  notifywatcher.hpp  powermon.hpp
include/JSONSocketModule/: ApplistModule.hpp  ConfigModule.hpp  InformationModule.hpp  MonitorModule.hpp
module/: customize.sh  module.prop  readme.md  service.sh
src/: ForegroundApp.cpp  ForegroundApp.hpp  JSONSocket.cpp  UnixSocketServer.cpp  inotifywatcher.hpp  main.cpp  main.hpp  powermon.cpp
src/BSwitcher/: BSwitcher.cpp  BSwitcher.hpp  ForegroundApp.cpp  configlist.hpp  inotifywatcher.hpp
src/BSwitcher/JSONSocket/: JSONSocket.cpp  JSONSocket.hpp
src/BSwitcher/JSONSocket/UnixSocketServer/: UnixSocketServer.cpp
src/BSwitcher/JSONSocketModule/: ApplistModule.hpp  ConfigModule.hpp  DynamicFps.hpp  InformationModule.hpp  MonitorModule.hpp
src/JSONSocket/: JSONSocket.cpp  JSONSocket.hpp
src/JSONSocket/UnixSocketServer/: UnixSocketServer.cpp  UnixSocketServer.hpp
src/JSONSocketModule/: ConfigModule.hpp  InformationModule.hpp  MonitorModule.hpp
src/common/: Alog.hpp
tool/: dontHaveNc.cpp
webui/: index.html  package-lock.json  package.json
webui/src/: appLoader.js  configManager.js  infoManager.js  ksu.js  main.js  pathConfig.js  socketClient.js  style.css  uiManager.js
